--- a/VidCoder/View/AddAutoPauseProcessDialog.xaml
+++ b/VidCoder/View/AddAutoPauseProcessDialog.xaml
@@ -52,7 +52,7 @@
             Margin="12 0 0 44"
             HorizontalAlignment="Left"
             VerticalAlignment="Bottom"
-            Command="{Binding RefreshCurrentProcessesCommand}"
+            Command="{Binding RefreshCurrentProcesses}"
             Content="{x:Static res:MiscRes.RefreshButton}" />
 
         <StackPanel
@@ -66,7 +66,7 @@
                 Margin="0 0 6 0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Command="{Binding AcceptCommand}"
+                Command="{Binding Accept}"
                 Content="{x:Static res:MiscRes.AddButton}"
                 IsDefault="True" />
             <Button
@@ -74,7 +74,7 @@
                 MinWidth="75"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Command="{Binding CancelCommand}"
+                Command="{Binding Cancel}"
                 Content="{x:Static res:CommonRes.Cancel}"
                 IsCancel="True" />
         </StackPanel>
