--- a/VidCoder/View/ChapterMarkersDialog.xaml
+++ b/VidCoder/View/ChapterMarkersDialog.xaml
@@ -73,7 +73,7 @@
             Margin="0 27 12 0"
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
-            Command="{Binding ImportCsvFileCommand}"
+            Command="{Binding ImportCsvFile}"
             Content="{x:Static res:ChapterMarkersRes.ImportFromCsvButton}"
             Padding="5 0" />
         <ListView
