--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -62,7 +62,7 @@
             Modifiers="Control" />
         <KeyBinding
             Key="D"
-            Command="{Binding OutputPathVM.PickOutputPathCommand}"
+            Command="{Binding OutputPathVM.PickOutputPath}"
             Modifiers="Control" />
     </Window.InputBindings>
     <Grid>
