--- a/VidCoder/View/QueueColumnsDialog.xaml
+++ b/VidCoder/View/QueueColumnsDialog.xaml
@@ -71,7 +71,7 @@
                 Margin="0 0 6 0"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Command="{Binding AcceptCommand}"
+                Command="{Binding Accept}"
                 Content="{x:Static res:CommonRes.Ok}"
                 IsDefault="True" />
             <Button
@@ -79,7 +79,7 @@
                 MinWidth="75"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Command="{Binding CancelCommand}"
+                Command="{Binding Cancel}"
                 Content="{x:Static res:CommonRes.Cancel}"
                 IsCancel="True" />
         </StackPanel>
