Removed last of messages and removed MVVM Light. Added ability to expose config settings as Observables.

--- a/VidCoder/Model/Config/Config.tt
+++ b/VidCoder/Model/Config/Config.tt
@@ -24,6 +24,7 @@ foreach (string line in lines)
 	}
 }
 #>
+using System;
 using System.Collections.Generic;
 using System.Data.SQLite;
 using VidCoder.Model;
@@ -34,6 +35,7 @@ namespace VidCoder
 	{
 		private static bool initialized;
 		private static Dictionary<string, object> cache;
+		private static Dictionary<string, object> observableCache;
 
 		public static void EnsureInitialized(SQLiteConnection connection)
 		{
@@ -51,6 +53,7 @@ namespace VidCoder
 
 		private static void Initialize(SQLiteConnection connection)
 		{
+			observableCache = new Dictionary<string, object>();
 			cache = new Dictionary<string, object>();
 <#
 foreach (var setting in settings)
@@ -71,6 +74,13 @@ foreach (var setting in settings)
 		{
 			cache[key] = value;
 			DatabaseConfig.Set(key, value);
+
+			object observableObject;
+			if (observableCache.TryGetValue(key, out observableObject))
+			{
+				var observable = (ConfigObservable<T>)observableObject;
+				observable.OnNext(value);
+			}
 		}
 
 <#
@@ -79,19 +89,35 @@ foreach (var setting in settings)
 #>
 		public static <#= setting.ValueType #> <#= setting.Name #>
 		{
-			get
-			{
-				return (<#= setting.ValueType #>)cache["<#= setting.Name #>"];
-			}
-			
-			set
-			{
-				cache["<#= setting.Name #>"] = value;
-				DatabaseConfig.Set("<#= setting.Name #>", value);
-			}
+			get { return (<#= setting.ValueType #>)cache["<#= setting.Name #>"]; }
+			set { Set("<#= setting.Name #>", value); }
 		}
 <#
 }   
 #>
+		public static class Observables
+		{
+<#
+foreach (var setting in settings)
+{
+#>
+			public static IObservable<<#= setting.ValueType #>> <#= setting.Name #> => GetObservable<<#= setting.ValueType #>>("<#= setting.Name #>");
+<#
+}   
+#>
+			private static IObservable<T> GetObservable<T>(string configName)
+			{
+				object observableObject;
+				if (observableCache.TryGetValue(configName, out observableObject))
+				{
+					return (ConfigObservable<T>)observableObject;
+				}
+
+				var newObservable = new ConfigObservable<T>(configName);
+				observableCache.Add(configName, newObservable);
+
+				return newObservable;
+			}
+		}
 	}
 }
